<resources>
    <string name="app_name">Quizzy</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="next">go to next question</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
</resources>