<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="#673AB7"
    tools:context=".view.result.ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_star"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/hey_congratulations"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        tools:text="@string/name"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        tools:text="Your Score is 9 out of 10"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimary"
        android:text="@string/finish"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>